# slack-chatgpt

./: .cruft.json  .pre-commit-config.yaml  LICENCE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: cookiecutter.yml  release.yml
docs/: api_docs.md
src/slack_gpt/: main.py
